<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skin Health Advisor</string>
    <string name="hello_world">Alvaro Gulliver</string>
    <string name="button_capture_data">Capture Data</string>
    <string name="button_create_person">Create New Person</string>
    <string name="button_select_person">Select Person</string>
    <string name="button_generate_report">Generate Diagnostic</string>
    <string name="button_settings">Settings</string>
    <string name="button_about_app">About This App</string>
    <string name="button_save">Save</string>
    <string name="txtCreateNewPersonName">Name or Code</string>
    <string name="txtCreateNewPersonHeight">Height</string>
    <string name="txtCreateNewPersonWeight">Weight</string>
    <string name="txtCreateNewPersonGender">Gender</string>
    <string name="txtCreateNewPersonGenderMale">Male</string>
    <string name="txtCreateNewPersonGenderFemale">Female</string>
    <string name="txtCreateNewPersonAge">Age</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_new_person">Create New Person</string>
    <string name="title_activity_select_person">Select Person</string>
    <string name="title_activity_generate_diagnostic_report">Generate Diagnostic Report</string>
    <string name="title_activity_capture_data">Capture Data</string>
    <string name="title_activity_main_sh">MainSHA</string>

</resources>
